# jack-haskell

./: .gitignore  .hlint.yaml  CHANGELOG  INSTALL  Makefile  cabal.project.local  jack.cabal  stack.yaml
examples/: Amplify.hs  Callbacks.hs  Capture.hs  Common.hs  ImpulseTrain.hs  Latency.hs  Melody.hs  Midimon.hs  Synthesizer.hs
examples/Synthesizer/: Render.hs
free/Sound/JACK/: FFIFree.hs
jackfree/Sound/JACK/: FFIFree.hs
src/Sound/: JACK.hs
src/Sound/JACK/: Audio.hs  Common.h  Exception.hs  FFI.hsc  MIDI.hs  Private.hs
src/Sound/JACK/FFI/: MIDI.hsc
