cabal-version:      2.2
name:               jack
version:            0.7.2.4
license:            GPL-3.0-only
license-file:       LICENSE
author:
    Henning Thielemann, Stefan Kersten, Soenke Hahn <soenkehahn@gmail.com>

synopsis:           Bindings for the JACK Audio Connection Kit
description:
    Bindings for the JACK Audio Connection Kit <http://jackaudio.org/>.
    It has support both for PCM audio and MIDI handling.
    .
    In order to adapt to your system,
    you may have to disable pkgConfig or jackFree cabal flags.
    .
    You must compile your clients with @-threaded@
    otherwise you will encounter segfaults.

homepage:           http://www.haskell.org/haskellwiki/JACK
category:           Sound
build-type:         Simple
tested-with:        GHC ==9.6.4
extra-source-files:
    CHANGELOG
    free/Sound/JACK/FFIFree.hs
    INSTALL
    jackfree/Sound/JACK/FFIFree.hs
    src/Sound/JACK/Common.h

source-repository head
    type:     darcs
    location: https://hub.darcs.net/thielema/jack/

source-repository this
    type:     darcs
    location: https://hub.darcs.net/thielema/jack/
    tag:      0.7.2.3

flag pkgConfig
    description: Use pkg-config tool for check version and presence of jack
    default:     True

flag jackFree
    description: Use jack_free instead of free
    default:     True

flag buildExamples
    description: Build example executables
    default:     False

library
    build-depends:
        , array               >=0.5     && <0.6
        , base                >=4.0     && <5.0
        , bytestring          >=0.9.1.4 && <0.12
        , enumset             >=0.0.5   && <0.2
        , event-list          >=0.1     && <0.2
        , explicit-exception  >=0.1.7   && <0.3
        , midi                >=0.1.5.2 && <0.3
        , non-negative        >=0.1     && <0.2
        , semigroups          >=0.1     && <1.0
        , transformers        >=0.2     && <0.7

    exposed-modules:
        Sound.JACK
        Sound.JACK.Audio
        Sound.JACK.Exception
        Sound.JACK.FFI
        Sound.JACK.MIDI

    other-modules:
        Sound.JACK.FFI.MIDI
        Sound.JACK.FFIFree
        Sound.JACK.Private

    default-language:   Haskell98
    build-tool-depends: hsc2hs:hsc2hs >=0.66 && <1.0
    hs-source-dirs:     src
    include-dirs:       src
    ghc-options:        -Wall -fwarn-tabs -fwarn-incomplete-record-updates

    if impl(ghc >=6.12)
        ghc-options: -fwarn-unused-do-bind

    if os(osx)
        cc-options: -U__BLOCKS__

    other-extensions:   ForeignFunctionInterface
    includes:
        jack/jack.h
        jack/midiport.h

    if flag(jackfree)
        hs-source-dirs: jackfree

    else
        hs-source-dirs: free

    if flag(pkgconfig)
        -- There seem to be two lines of JACK:
        --   JACK1 as used by Ubuntu, e.g. jack-0.118.0
        --   JACK2 as used by Suse, e.g. jack-1.9.0
        if flag(jackfree)
            pkgconfig-depends: jack >=0.118 && <1 || >=1.9.8 && <2

        else
            pkgconfig-depends: jack >=0.0 && <0.118 || >=1.9.0 && <1.9.8

    else
        -- use extra-libraries, if pkg-config fails
        --   http://hackage.haskell.org/trac/hackage/ticket/170
        extra-libraries: jack

executable jack-amplify
    if flag(buildexamples)
        build-depends:
            , base  >=3.0 && <5
            , jack

    else
        buildable: False

    default-language: Haskell98
    ghc-options:      -Wall -fwarn-tabs -fwarn-incomplete-record-updates
    hs-source-dirs:   examples
    main-is:          Amplify.hs

executable jack-callbacks
    if flag(buildexamples)
        build-depends:
            , array
            , base                >=3.0 && <5
            , explicit-exception
            , jack
            , transformers

    else
        buildable: False

    default-language: Haskell98
    ghc-options:      -Wall -fwarn-tabs -fwarn-incomplete-record-updates
    hs-source-dirs:   examples
    main-is:          Callbacks.hs
    other-modules:    Common

executable jack-latency
    if flag(buildexamples)
        build-depends:
            , array
            , base                >=3.0 && <5
            , explicit-exception
            , jack
            , transformers

    else
        buildable: False

    default-language: Haskell98
    ghc-options:      -Wall -fwarn-tabs -fwarn-incomplete-record-updates
    hs-source-dirs:   examples
    main-is:          Latency.hs
    other-modules:    Common

executable jack-capture
    if flag(buildexamples)
        build-depends:
            , array
            , base                >=3.0 && <5
            , explicit-exception
            , jack
            , transformers

    else
        buildable: False

    default-language: Haskell98
    ghc-options:      -Wall -fwarn-tabs -fwarn-incomplete-record-updates
    hs-source-dirs:   examples
    main-is:          Capture.hs
    other-modules:    Common

executable jack-impulse-train
    if flag(buildexamples)
        build-depends:
            , array
            , base                >=3.0 && <5
            , explicit-exception
            , jack
            , transformers

    else
        buildable: False

    default-language: Haskell98
    ghc-options:      -Wall -fwarn-tabs -fwarn-incomplete-record-updates
    hs-source-dirs:   examples
    main-is:          ImpulseTrain.hs
    other-modules:    Common

executable jack-midimon
    if flag(buildexamples)
        build-depends:
            , base  >=3.0     && <5
            , jack
            , midi  >=0.1.5.2 && <0.3

    else
        buildable: False

    default-language: Haskell98
    ghc-options:      -Wall -fwarn-tabs -fwarn-incomplete-record-updates
    hs-source-dirs:   examples
    main-is:          Midimon.hs

executable jack-melody
    if flag(buildexamples)
        build-depends:
            , base                >=3.0     && <5
            , event-list          >=0.1     && <0.2
            , explicit-exception
            , jack
            , midi                >=0.1.5.2 && <0.3
            , non-negative        >=0.1     && <0.2
            , transformers

    else
        buildable: False

    default-language: Haskell98
    ghc-options:      -Wall -fwarn-tabs -fwarn-incomplete-record-updates
    hs-source-dirs:   examples
    main-is:          Melody.hs
    other-modules:    Common

executable jack-synth
    if flag(buildexamples)
        build-depends:
            , array
            , base                >=3.0     && <5
            , bytestring
            , containers          >=0.2     && <0.7
            , event-list          >=0.1     && <0.2
            , explicit-exception
            , jack
            , midi                >=0.1.5.2 && <0.3
            , storablevector      >=0.2.7   && <0.3
            , transformers

    else
        buildable: False

    default-language: Haskell98
    ghc-options:      -Wall -fwarn-tabs -fwarn-incomplete-record-updates
    hs-source-dirs:   examples
    main-is:          Synthesizer.hs
    other-modules:
        Common
        Synthesizer.Render
